--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "@stitches/react": "^1.2.8",
+    "axios": "^0.27.2",
+    "keen-slider": "^6.7.0",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "stripe": "^10.17.0"
   },
   "devDependencies": {
-    "eslint": "9.9.0",
-    "eslint-config-next": "14.2.5"
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "typescript": "^4.7.4"
   }
 }
